k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: iotea
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
