k8s/base/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iotea-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: iotea.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: iotea-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iotea-frontend
                port:
                  number: 80
